<resources>
    <string name="app_name">Observer"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="backSpace">⌫</string>
    <string name="score_entry">Score Entry</string>
    <string name="riding_number">Riding Number</string>
    <string name="tsr22SP"><![CDATA[<b>TSR 22 - Stop Permitted</b><br/>A machine will be deemed to be in an Observed Section or Sub-Section when the front wheel spindle has passed the ‘Section Begins’ Card and until the front wheel spindle has passed the ‘Section Ends’ Card. Marks will be lost as follows:<br/><br/>
  0 - Clean<br/>
  1 - Footing once<br/>
  2 - Footing twice<br/>
  3 - Footing more than twice<br/>
  5 - Failure<br/>
  5 - When requested by a rider rather than attempt the section<br/>
  5 - Entering a section before being called upon to do so by an official<br/>
  10 - Not attempting a section when called upon to do so by an official<br/>
  10 - For missing a section or failing to have punch card marked<br/><br/>
 <b>Definitions</b><br/>
 <b>Clean:</b><br/> A rider traversing a Section as defined above without penalty as described under footing or failure shall be unpenalised and given a clean.<br/>
 <b>Footing:</b> Footing will be considered to have occurred if any part of the rider’s body or any part of the machine, (with the exception of the tyres or the sump shield) touches the ground or the rider benefit from any part of their body, or any part of the machine, (with the exception of the tyres or the sump shield) leaning on an obstacle (tree, wall etc.)Footing outside the lateral limits of a Section does not constitute a failure but should simply be classed as footing.<br/>
 <b>Failure:</b><br/> A failure is considered to have occurred if:<br/>
 • The machine moves backwards.<br/>
 • The rider does not have both hands on the handlebar when he foots whilst stationary.<br/>
 • The engine stops whilst any part of the machine, with the exception of the tyres, touches the ground or the rider is footing.<br/>
 • The rider dismounts from the machine. Dismount will be deemed to have occurred when both of the rider’s feet are on the ground at the same side of, or behind, the machine.<br/>
 • A rider is requested to leave the section by the observer for “unnecessary delay”.<br/>
 • A machine does not stay within the intended limits of the section as defined by the Observer.<br/>
 • If any wheel of the machine crosses any boundary tape or goes over or on the wrong side of a marker, whether the wheel be on the ground or airborne, before the front wheel spindle<br/>passes the “Section ends” sign.<br/>
 • The rider is held responsible for displacing a marker or support in an observed section whereby the observer considers it necessary to reinstate the flag/marker prior to the passage of the next rider.<br/>
 • The displacing of any marking not relating to the competitor’s route will be considered to constitute a failure.<br/>• Travelling in a forward direction against the direction of the Section.<br/>• The motorcycle crosses its own track with either wheel.<br/>
 • The machine or rider receives outside assistance.
 <br/>• A rider or person having an interest in a rider’s performance, who in any way alters the severity of a section without the authority of an official.
 <br/><b>For Sidecar events only</b>
 <br/>A failure is considered to have occurred if:
<br/>The passenger foots i.e. if any part of the passenger’s body touches the ground, or benefit is gained from any part of his body leaning on an obstacle (tree, wall etc.)<br/>
]]></string>
    <string name="tsr22NS"><![CDATA[<b>TSR 22 - Non-stop</b><br/>A machine will be deemed to be in an Observed Section or Sub-Section when the front wheel spindle has passed the ‘Section Begins’ Card and until the front wheel spindle has passed the ‘Section Ends’ Card. Marks will be lost as follows:<br/><br/>
  0 - Clean<br/>
  1 - Footing once<br/>
  2 - Footing twice<br/>
  3 - Footing more than twice<br/>
  5 - Failure<br/>
  5 - When requested by a rider rather than attempt the section<br/>
  5 - Entering a section before being called upon to do so by an official<br/>
  10 - Not attempting a section when called upon to do so by an official<br/>
  10 - For missing a section or failing to have punch card marked<br/><br/>

<b>Definitions</b><br/>
<b>Clean:</b><br/>
A rider traversing a Section as defined above without penalty as described under Footing or Failure shall be unpenalised and given a Clean.
<br/><b>Footing: </b><br/>
Footing will be considered to have occurred if any part of the rider’s body or any part of the machine, (with the exception of the tyres or the sump shield) touches the ground or the rider benefit from any part of their body, or any part of the machine, (with the exception of the tyres or the sump shield) leaning on an obstacle (tree, wall etc.),
Footing outside the lateral limits of a Section does not constitute a failure but should simply be classed as footing.
<br/><b>Failure:</b><br/>
A failure is considered to have occurred if:
<br/>• The machine ceases to move in a forward direction.
<br/>• The rider dismounts from the machine. Dismount will be deemed to have occurred when both of the rider’s feet are on the ground at the same side of or behind the machine.
<br/>• A machine does not stay within the intended limits of the section as defined by the Observer.
<br/>• If any wheel of the machine crosses any boundary tape or goes over or the wrong side of a marker, whether the wheel be on the ground or airborne, before the front wheel spindle passes the “Section ends” sign.
<br/>• The rider or passenger is held responsible for displacing any marker or support in an observed section whereby the observer considers it necessary to reinstate the flag/marker prior to the passage of the next rider. The displacement of any marking not relating to the competitor’s route will also be considered to warrant a failure.
<br/>• The machine or rider travels in a forward direction against the direction of the Section.
<br/>• The motorcycle crosses its own track with either wheel.
<br/>• The machine, or rider or passenger receives outside assistance.
<br/>• A rider or person having an interest in a rider’s performance, in any way alters the severity of a section without the authority of an official.
<b><br/>
<br/>For Sidecar events only</b><br/>
A failure is considered to have occurred if:
<br/>The passenger foots i.e. if any part of the passenger’s body touches the ground, or benefit is gained from any part of his body leaning on an obstacle (tree, wall etc.)<br/>]]></string>
    <string name="score">Score</string>
    <string name="rider">Rider</string>
    <string name="textview">TextView</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="save">Save</string>
    <string name="rider_number">Riding number</string>
    <string name="V21">Score Monster - V2.0</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Add to Favourites</string>
    <string name="setup">Settings</string>
    <string name="item1">Item 1</string>
    <string name="item2">Item 2</string>
    <string name="switch_item">Switch</string>
    <string name="section_number">Section number</string>
    <string name="section">Section</string>
    <string name="observer">Observer name</string>
    <string name="trial_id">Trial ID</string>
    <string name="export">Upload scores</string>
    <string name="upload_scores">Upload scores</string>
    <string name="process_data">Upload data</string>
    <string name="sync_status">Status</string>
    <string name="lap">Lap</string>
    <string name="total">Total</string>
    <string-array name="scores">
        <item>Clean</item>
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Five</item>
        <item>X</item>
        <item>Remove</item>
    </string-array>
    <string name="laps">Laps</string>
    <string name="warning">Confirmation needed - this will permanently delete all current data. \nTo proceed, check the box!</string>
    <string name="ok">OK</string>
    <string name="number_of_laps">Number of laps</string>
    <string name="number_of_sections">Number of sections</string>
    <string name="clean">Clean</string>
    <string name="dab">Dab</string>
    <string name="five">Five</string>
    <string name="ten">Ten</string>
    <string name="score_summary">Score summary</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="number_pad">Number Pad</string>
    <string name="dab_pad">Dab Pad</string>
    <string name="score_entry_text">"Score Entry\n\nDab - Click for each dab. The score will count up to three dabs. Clicking more than three times will not increase the score.\nFive - will record a Five\nTen - Not attempting a Section when called upon to do so by an Official\nTen - For missing a section or failing to have punch card marked. "</string>
    <string name="vanilla">vanilla</string>
    <string name="land">land</string>
    <string name="page_title">Page Title</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="top">Top</string>
    <string name="bottom">bottom</string>
    <string name="large_land">large-land</string>
    <string name="basic">Basic</string>
    <string name="unused">unused</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="reset_scores">Destroy scores</string>
    <string name="trialid">TrialID</string>
    <string name="timing_mode">Timing mode</string>
    <string name="finish">Finish</string>
    <string name="start_clock">Start clock</string>
    <string name="timesheet">Time Sheet</string>
    <string name="latest_times">Latest Times</string>
    <string name="time">Time</string>
    <string name="penalties">Penalties</string>
    <string name="name">Name</string>
    <string name="select_trial">Select trial</string>
    <string name="email">Email address</string>
    <string name="prev">prev</string>
    <string name="next">next</string>
    <string name="trial_name">Trial name</string>
    <string name="sendmail">Email scores</string>
    <string name="mode_header">Mode</string>
    <string name="trial_header">Trial details</string>
    <string name="mode_title">Scoring mode</string>
    <string name="contact">Contact number</string>
    <string name="startTimerButtonText">start timer</string>
    <string name="finishButtonText">Enter</string>
    <string name="status_line">Status Line</string>
    <string name="observerName">Enter observer name</string>
    <string name="observerContactNumber">Enter observer contact number</string>
    <string name="enterRiderNumber">Enter rider number</string>
    <string name="select_trial_from_available_choices">Select trial from available choices</string>
    <string name="score_">Score</string>
    <string name="go_to_previous_section">Go to previous section</string>
    <string name="go_to_next_section">Go to next section</string>
</resources>