<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/mode_header">

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/mode_entries"
            app:entryValues="@array/mode_values"
            app:key="mode"
            app:title="@string/mode_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/trial_header">

        <EditTextPreference
            app:key="observer"
            app:title="@string/observer"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="mobile"
            app:title="@string/contact"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
        app:key="section"
        app:title="@string/section_number"
        app:useSimpleSummaryProvider="true" />



    </PreferenceCategory>

</PreferenceScreen>