<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/timeMode"
        android:icon="@drawable/ic_timer_white_48dp"
        android:title="@string/timing_mode"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/upload"
        android:icon="@drawable/ic_list_white_48dp"
        android:title="@string/export"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/email"
        android:icon="@drawable/ic_baseline_email_48"
        android:title="@string/email"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/list"
        android:enabled="false"
        android:icon="@drawable/ic_list_white_48dp"
        android:title="@string/leaderboard"
        android:visible="false" />

    <item
        android:id="@+id/setup"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/setup"
        app:showAsAction="ifRoom" />
</menu>