<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="uk.trialmonster.observer.NumberPadFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button1"
                style="@style/CustomButtonStyle"
                android:onClick="addDigit"
                android:text="@string/_1"
                tools:text="@string/_1" />

            <Button
                android:id="@+id/button2"
                style="@style/CustomButtonStyle"
                android:onClick="addDigit"
                android:text="@string/_2"
                tools:text="@string/_2" />

            <Button
                android:id="@+id/button3"
                style="@style/CustomButtonStyle"
                android:onClick="addDigit"
                android:text="@string/_3"
                tools:text="@string/_3" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0dp">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button4"
                style="@style/CustomButtonStyle"
                android:onClick="addDigit"
                android:text="@string/_4"
                tools:text="4"/>


            <Button
                android:id="@+id/button5"
                style="@style/CustomButtonStyle"
                android:onClick="addDigit"
                android:text="@string/_5"
                tools:text="5"/>


            <Button
                android:id="@+id/button6"
                style="@style/CustomButtonStyle"
                android:onClick="addDigit"
                android:text="@string/_6"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0dp">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button7"
                style="@style/CustomButtonStyle"
                android:onClick="addDigit"
                android:text="@string/_7"
                tools:text="7"/>

            <Button
                android:id="@+id/button8"
                style="@style/CustomButtonStyle"
                android:onClick="addDigit"
                android:text="@string/_8"
                tools:text="8"/>

            <Button
                android:id="@+id/button9"
                style="@style/CustomButtonStyle"
                android:onClick="addDigit"
                android:text="@string/_9"
                tools:text="9"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0dp">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonClear"
                style="@style/CustomButtonStyle"
                android:onClick="addDigit"
                android:text="@string/c"
                tools:text="C"/>

            <Button
                android:id="@+id/button0"
                style="@style/CustomButtonStyle"
                android:enabled="true"
                android:onClick="addDigit"
                android:text="@string/_0"
                tools:text="0"/>

            <Button
                android:id="@+id/buttonBack"
                style="@style/CustomButtonStyle"
                android:onClick="addDigit"
                android:text="@string/backSpace"

                tools:text="@string/backSpace"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>