<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="uk.trialmonster.observer.PadFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonClean"
            style="@style/CustomButtonStyle"
            android:layout_width="match_parent"
            android:backgroundTint="@color/colorButtonGreen"
            android:onClick="scoreClean"
            android:text="@string/clean" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           android:padding="0dp">

            <Button
                android:id="@+id/buttonOneDab"
                style="@style/CustomButtonStyle"
                android:backgroundTint="@color/colorButtonAmber"
                android:onClick="scoreOne"
                android:text="@string/_1" />

            <Button
                android:id="@+id/buttonTwoDab"
                style="@style/CustomButtonStyle"
                android:backgroundTint="@color/colorButtonAmber"
                android:onClick="scoreTwo"
                android:text="@string/_2"/>

            <Button
                android:id="@+id/buttonThreeDab"
                style="@style/CustomButtonStyle"
                android:backgroundTint="@color/colorButtonAmber"
                android:onClick="scoreThree"
                android:text="@string/_3" />
        </LinearLayout>

        <Button
            android:id="@+id/FiveDab"
            style="@style/CustomButtonStyle"
            android:layout_width="match_parent"
            android:backgroundTint="@color/colorButtonBrightRed"
            android:onClick="scoreFive"
            android:text="@string/five"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>