<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.TimeSheetActivity">

    <TextView
        android:text="@string/latest_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView7"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toTopOf="@id/rvTimes"
        android:layout_marginBottom="4dp"
        android:id="@+id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp">

        <TextView
            android:text="@string/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/riderLabel"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_primary_dark"
            android:textAlignment="textStart"
            android:layout_marginStart="40dp" />

        <TextView
            android:text="@string/time"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="textEnd"
            android:id="@+id/timeLabel"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_primary_dark" />

        <TextView
            android:text="@string/penalties"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:gravity="end"
            android:id="@+id/textView9"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_primary_dark"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/rvTimes" />

</androidx.constraintlayout.widget.ConstraintLayout>